Update css for Content overflow issue in news category page

--- a/source/wp-content/themes/wporg-news-2021/sass/post/_content.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/post/_content.scss
@@ -2,6 +2,7 @@
 	.blog &,
 	.category:not(.category-community):not(.category-events):not(.category-releases) & {
 		padding-bottom: 20px;
+		word-break: break-word;
 
 		@include break-mobile() {
 			margin-bottom: 40px;
